# godot

./: CMakeLists.txt  README.md  cmake_methods.py  gles3_builders.py  gles_builders.py  glsl_builders.py  methods.cmake  methods.py
core/: CMakeLists.txt  core_builders.py  gen_methods.py  make_binders.py
core/config/: CMakeLists.txt
core/crypto/: CMakeLists.txt
core/extension/: CMakeLists.txt  make_interface_dumper.py  make_wrappers.py
core/input/: CMakeLists.txt  input_builders.py
core/math/: CMakeLists.txt
core/object/: CMakeLists.txt  make_virtuals.py
core/os/: CMakeLists.txt
drivers/: CMakeLists.txt
drivers/alsa/: CMakeLists.txt
drivers/backtrace/: CMakeLists.txt
drivers/coreaudio/: CMakeLists.txt
drivers/d3d12/: CMakeLists.txt
drivers/gl_context/: CMakeLists.txt
drivers/gles2/: CMakeLists.txt
drivers/gles2/shaders/: CMakeLists.txt
drivers/gles3/: CMakeLists.txt
drivers/gles3/environment/: CMakeLists.txt
drivers/gles3/shaders/: CMakeLists.txt
drivers/png/: CMakeLists.txt
drivers/pulseaudio/: CMakeLists.txt
drivers/unix/: CMakeLists.txt
drivers/vulkan/: CMakeLists.txt
drivers/xaudio2/: CMakeLists.txt
editor/: CMakeLists.txt  editor_builders.py  template_builders.py
editor/debugger/: CMakeLists.txt
editor/doc/: CMakeLists.txt
editor/icons/: CMakeLists.txt  editor_icons_builders.py
editor/import/: CMakeLists.txt
editor/plugins/: CMakeLists.txt
editor/themes/: CMakeLists.txt  editor_theme_builders.py
main/: CMakeLists.txt  main_builders.py
main/tests/: CMakeLists.txt
modules/: CMakeLists.txt  cmake_modules_builders.py  modules_builders.py
modules/arkit/: CMakeLists.txt  config.cmake
modules/assimp/: CMakeLists.txt
modules/astcenc/: CMakeLists.txt  config.cmake
modules/basis_universal/: CMakeLists.txt  config.cmake
modules/bmp/: CMakeLists.txt
modules/bullet/: CMakeLists.txt
modules/camera/: CMakeLists.txt  config.cmake
modules/csg/: CMakeLists.txt  config.cmake
modules/cvtt/: CMakeLists.txt  config.cmake
modules/dds/: CMakeLists.txt
modules/denoise/: CMakeLists.txt  config.cmake  resource_to_cpp.py
modules/enet/: CMakeLists.txt  config.cmake
modules/etc/: CMakeLists.txt
modules/etcpak/: CMakeLists.txt  config.cmake
modules/fbx/: CMakeLists.txt  config.cmake
modules/freetype/: CMakeLists.txt  config.cmake
modules/gdnative/: CMakeLists.txt  config.cmake  gdnative_builders.py
modules/gdnative/arvr/: CMakeLists.txt
modules/gdnative/net/: CMakeLists.txt
modules/gdnative/pluginscript/: CMakeLists.txt
modules/gdnative/videodecoder/: CMakeLists.txt
modules/gdscript/: CMakeLists.txt  config.cmake
modules/glslang/: CMakeLists.txt  config.cmake
modules/gltf/: CMakeLists.txt  config.cmake
modules/gltf/extensions/: CMakeLists.txt
modules/gridmap/: CMakeLists.txt  config.cmake
modules/hdr/: CMakeLists.txt
modules/interactive_music/: CMakeLists.txt  config.cmake
modules/jpg/: CMakeLists.txt
modules/jsonrpc/: CMakeLists.txt  config.cmake
modules/ktx/: CMakeLists.txt  config.cmake
modules/lightmapper_cpu/: CMakeLists.txt  config.cmake
modules/lightmapper_rd/: CMakeLists.txt
modules/mbedtls/: CMakeLists.txt  config.cmake
modules/meshoptimizer/: CMakeLists.txt  config.cmake
modules/minimp3/: CMakeLists.txt  config.cmake
modules/mobile_vr/: CMakeLists.txt  config.cmake
modules/mono/: CMakeLists.txt  config.cmake
modules/mono/build_scripts/: api_solution_build.py  cmake_mono_configure_utils.py  godot_tools_build.py  mono_reg_utils.py
modules/msdfgen/: CMakeLists.txt  config.cmake
modules/multiplayer/: CMakeLists.txt  config.cmake
modules/navigation/: CMakeLists.txt
modules/noise/: CMakeLists.txt  config.cmake
modules/ogg/: CMakeLists.txt  config.cmake
modules/opensimplex/: CMakeLists.txt  config.cmake
modules/openxr/: CMakeLists.txt  config.cmake
modules/openxr/editor/: CMakeLists.txt
modules/openxr/extensions/: CMakeLists.txt
modules/opus/: CMakeLists.txt
modules/pvr/: CMakeLists.txt
modules/raycast/: CMakeLists.txt  config.cmake
modules/recast/: CMakeLists.txt
modules/regex/: CMakeLists.txt  config.cmake
modules/squish/: CMakeLists.txt  config.cmake
modules/stb_vorbis/: CMakeLists.txt  config.cmake
modules/svg/: CMakeLists.txt  config.cmake
modules/text_server_adv/: CMakeLists.txt  cmake_icu_data_gen.py  config.cmake
modules/text_server_fb/: CMakeLists.txt  config.cmake
modules/tga/: CMakeLists.txt
modules/theora/: CMakeLists.txt  config.cmake
modules/tinyexr/: CMakeLists.txt  config.cmake
modules/upnp/: CMakeLists.txt  config.cmake
modules/vhacd/: CMakeLists.txt  config.cmake
modules/visual_script/: CMakeLists.txt  config.cmake
modules/vorbis/: CMakeLists.txt  config.cmake
modules/webm/: CMakeLists.txt  config.cmake
modules/webm/libvpx/: CMakeLists.txt
modules/webp/: CMakeLists.txt
modules/webrtc/: CMakeLists.txt  config.cmake
modules/websocket/: CMakeLists.txt  config.cmake
modules/webxr/: CMakeLists.txt  config.cmake
modules/xatlas_unwrap/: CMakeLists.txt  config.cmake
modules/zip/: CMakeLists.txt  config.cmake
platform/: CMakeLists.txt  (+3 more)
platform/linuxbsd/: CMakeLists.txt  cmake_platform_linuxbsd_builders.py  detect.cmake  platform_linuxbsd_builders.py
platform/linuxbsd/wayland/: CMakeLists.txt
platform/linuxbsd/x11/: CMakeLists.txt
platform/windows/: CMakeLists.txt  detect.cmake  platform_windows_builders.py
scene/: CMakeLists.txt
scene/2d/physics/: CMakeLists.txt
scene/3d/: CMakeLists.txt
scene/animation/: CMakeLists.txt
scene/resources/: CMakeLists.txt
scene/resources/2d/: CMakeLists.txt
scene/resources/3d/: CMakeLists.txt
scene/resources/default_theme/: CMakeLists.txt  default_theme_builders.py  (+1 more)
scene/theme/: CMakeLists.txt  default_theme_builders.py
servers/: CMakeLists.txt
servers/audio/: CMakeLists.txt
servers/camera/: CMakeLists.txt
servers/extensions/: CMakeLists.txt
servers/movie_writer/: CMakeLists.txt
servers/physics/: CMakeLists.txt
servers/physics_3d/: CMakeLists.txt
servers/rendering/: CMakeLists.txt
servers/visual/: CMakeLists.txt
(+17 files in other folders)
